--- a/Application_For_Infopulse/Client/Pages/OrderPages/EditOrder.razor
+++ b/Application_For_Infopulse/Client/Pages/OrderPages/EditOrder.razor
@@ -9,9 +9,9 @@
 <ActionTitle ActionString='@("New Order")' />
 @if (customers == null || order == null)
 {
-    <div class="row">
-        Loading, please wait...
-    </div>
+<div class="row">
+    Please wait. Loading...
+</div>
 }
 else
 {
